--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
        android:layout_height="match_parent">
       <yonky.fixpic.MyView
           android:id="@+id/image_view"
-          android:src="@drawable/comment_js"
+          android:src="@drawable/receiving"
           android:layout_width="match_parent"
           android:layout_height="match_parent" />
       <LinearLayout
@@ -18,6 +18,20 @@
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:layout_alignParentBottom="true">
+         <LinearLayout
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content">
+            <TextView
+                android:text="淘气值："
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <EditText
+                android:id="@+id/tv_taoqi"
+                android:text="800"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+         </LinearLayout>
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
